--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -65,6 +65,9 @@
            <bold>true</bold>
           </font>
          </property>
+         <property name="focusPolicy">
+          <enum>Qt::NoFocus</enum>
+         </property>
         </widget>
        </item>
        <item row="1" column="2">
@@ -74,6 +77,9 @@
            <pointsize>10</pointsize>
            <bold>true</bold>
           </font>
+         </property>
+         <property name="focusPolicy">
+          <enum>Qt::NoFocus</enum>
          </property>
         </widget>
        </item>
@@ -115,6 +121,9 @@
          <layout class="QGridLayout" name="gridLayout_2">
           <item row="0" column="0">
            <widget class="QRadioButton" name="radioButton44">
+            <property name="focusPolicy">
+             <enum>Qt::NoFocus</enum>
+            </property>
             <property name="text">
              <string>44.1kHz</string>
             </property>
@@ -122,6 +131,9 @@
           </item>
           <item row="1" column="0">
            <widget class="QRadioButton" name="radioButton48">
+            <property name="focusPolicy">
+             <enum>Qt::NoFocus</enum>
+            </property>
             <property name="text">
              <string>48kHz</string>
             </property>
@@ -266,7 +278,11 @@
      </widget>
     </item>
     <item row="0" column="0">
-     <widget class="QComboBox" name="comboBoxRecentFiles"/>
+     <widget class="QComboBox" name="comboBoxRecentFiles">
+      <property name="focusPolicy">
+       <enum>Qt::ClickFocus</enum>
+      </property>
+     </widget>
     </item>
     <item row="5" column="1" colspan="2">
      <widget class="QComboBox" name="comboBoxDriver"/>
@@ -327,6 +343,9 @@
        </item>
        <item row="2" column="0" colspan="17">
         <widget class="QSlider" name="wavSlider">
+         <property name="focusPolicy">
+          <enum>Qt::NoFocus</enum>
+         </property>
          <property name="orientation">
           <enum>Qt::Horizontal</enum>
          </property>
